--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #f0f0f08e;
     font-family:roboto,sans-serif;
     overflow-x: hidden;
-    width: 100%;
+    /* width: 100%; */
 }
 .dropdown-item:hover {
     background-color: #184d47;
